src/main/kotlin/com/example/spotifyapitfg/error/ErrorRespuesta.kt
package com.example.spotifyapitfg.error

data class ErrorRespuesta(val message: String, val uri: String)
